Complete the refund logic

--- a/IPSX/Flows/Funds/Storyboard/Funds.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Funds.storyboard
@@ -322,7 +322,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13 Apr 2018   08:22" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="chN-uP-9Cq">
-                                                    <rect key="frame" x="14.999999999999993" y="60.333333333333336" width="119.33333333333331" height="15.666666666666664"/>
+                                                    <rect key="frame" x="15.000000000000007" y="60" width="119.66666666666669" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -583,7 +583,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g25-MS-4J4">
-                                        <rect key="frame" x="15" y="47.999999999999986" width="315" height="174.66666666666663"/>
+                                        <rect key="frame" x="10" y="42.999999999999986" width="325" height="179.66666666666663"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -594,11 +594,11 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="g9n-XV-r6t" firstAttribute="top" secondItem="v0P-gi-e1r" secondAttribute="top" constant="15" id="96E-TC-Zi8"/>
-                                    <constraint firstAttribute="trailing" secondItem="g25-MS-4J4" secondAttribute="trailing" constant="15" id="Gjs-oR-roY"/>
+                                    <constraint firstAttribute="trailing" secondItem="g25-MS-4J4" secondAttribute="trailing" constant="10" id="Gjs-oR-roY"/>
                                     <constraint firstAttribute="bottom" secondItem="g25-MS-4J4" secondAttribute="bottom" constant="15" id="Jam-Le-PvC"/>
                                     <constraint firstItem="g9n-XV-r6t" firstAttribute="leading" secondItem="v0P-gi-e1r" secondAttribute="leading" constant="15" id="mj1-eG-Hqy"/>
-                                    <constraint firstItem="g25-MS-4J4" firstAttribute="leading" secondItem="v0P-gi-e1r" secondAttribute="leading" constant="15" id="noW-kN-wk2"/>
-                                    <constraint firstItem="g25-MS-4J4" firstAttribute="top" secondItem="g9n-XV-r6t" secondAttribute="bottom" constant="15" id="szl-79-LFV"/>
+                                    <constraint firstItem="g25-MS-4J4" firstAttribute="leading" secondItem="v0P-gi-e1r" secondAttribute="leading" constant="10" id="noW-kN-wk2"/>
+                                    <constraint firstItem="g25-MS-4J4" firstAttribute="top" secondItem="g9n-XV-r6t" secondAttribute="bottom" constant="10" id="szl-79-LFV"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
@@ -641,7 +641,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KHz-h3-3P8">
-                                        <rect key="frame" x="15" y="47.999999999999957" width="315" height="211.33333333333337"/>
+                                        <rect key="frame" x="10" y="42.999999999999957" width="325" height="216.33333333333337"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -709,10 +709,10 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="2Z2-vl-Wsy" firstAttribute="top" secondItem="yu8-0e-Xzf" secondAttribute="top" constant="15" id="BtS-yz-Yqf"/>
-                                    <constraint firstItem="KHz-h3-3P8" firstAttribute="top" secondItem="2Z2-vl-Wsy" secondAttribute="bottom" constant="15" id="bBK-ps-T7a"/>
-                                    <constraint firstAttribute="trailing" secondItem="KHz-h3-3P8" secondAttribute="trailing" constant="15" id="iaj-94-2au"/>
+                                    <constraint firstItem="KHz-h3-3P8" firstAttribute="top" secondItem="2Z2-vl-Wsy" secondAttribute="bottom" constant="10" id="bBK-ps-T7a"/>
+                                    <constraint firstAttribute="trailing" secondItem="KHz-h3-3P8" secondAttribute="trailing" constant="10" id="iaj-94-2au"/>
                                     <constraint firstItem="2Z2-vl-Wsy" firstAttribute="leading" secondItem="yu8-0e-Xzf" secondAttribute="leading" constant="15" id="kZU-fN-BeR"/>
-                                    <constraint firstItem="KHz-h3-3P8" firstAttribute="leading" secondItem="yu8-0e-Xzf" secondAttribute="leading" constant="15" id="sbH-aT-5il"/>
+                                    <constraint firstItem="KHz-h3-3P8" firstAttribute="leading" secondItem="yu8-0e-Xzf" secondAttribute="leading" constant="10" id="sbH-aT-5il"/>
                                     <constraint firstAttribute="bottom" secondItem="KHz-h3-3P8" secondAttribute="bottom" constant="15" id="tqI-dM-q3e"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
@@ -781,16 +781,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rtg-uG-ld7" userLabel="Toast Holder">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rtg-uG-ld7" userLabel="Separator">
                                 <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.29984595067042252" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="meN-hv-t5l"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X93-C9-yrd" userLabel="Separator">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X93-C9-yrd" userLabel="Toast Holder">
                                 <rect key="frame" x="0.0" y="88" width="375" height="0.6666666666666714"/>
-                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30163402290000002" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="u07-8C-sip"/>
                                 </constraints>
@@ -809,7 +809,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Refund for Porxy #69" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YAZ-l7-4bC">
-                                        <rect key="frame" x="102.33333333333333" y="62" width="170.66666666666669" height="21"/>
+                                        <rect key="frame" x="102" y="62" width="171" height="21"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -832,13 +832,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="160,200.50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ya1-Wx-5Ee">
-                                        <rect key="frame" x="92" y="0.6666666666666714" width="82" height="18"/>
+                                        <rect key="frame" x="92" y="0.3333333333333286" width="82" height="18"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                         <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ipsxIcon" translatesAutoresizingMaskIntoConstraints="NO" id="MDN-cN-dA5">
-                                        <rect key="frame" x="182" y="2.6666666666666714" width="14" height="14"/>
+                                        <rect key="frame" x="182" y="2.3333333333333286" width="14" height="14"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="14" id="QfM-vP-Y4P"/>
                                             <constraint firstAttribute="height" constant="14" id="rSi-0G-mLo"/>
@@ -866,9 +866,9 @@
                                         <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="c7A-RP-QM6">
-                                        <rect key="frame" x="15" y="48" width="315" height="169"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="c7A-RP-QM6">
+                                        <rect key="frame" x="10" y="43" width="325" height="174"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -877,11 +877,11 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="c7A-RP-QM6" firstAttribute="leading" secondItem="iPJ-rO-kCo" secondAttribute="leading" constant="15" id="0Le-9D-041"/>
+                                    <constraint firstItem="c7A-RP-QM6" firstAttribute="leading" secondItem="iPJ-rO-kCo" secondAttribute="leading" constant="10" id="0Le-9D-041"/>
                                     <constraint firstItem="WRk-3E-6B2" firstAttribute="leading" secondItem="iPJ-rO-kCo" secondAttribute="leading" constant="15" id="5XL-iF-MDN"/>
-                                    <constraint firstItem="c7A-RP-QM6" firstAttribute="top" secondItem="WRk-3E-6B2" secondAttribute="bottom" constant="15" id="bga-TA-2x7"/>
+                                    <constraint firstItem="c7A-RP-QM6" firstAttribute="top" secondItem="WRk-3E-6B2" secondAttribute="bottom" constant="10" id="bga-TA-2x7"/>
                                     <constraint firstItem="WRk-3E-6B2" firstAttribute="top" secondItem="iPJ-rO-kCo" secondAttribute="top" constant="15" id="iOA-bU-gpW"/>
-                                    <constraint firstAttribute="trailing" secondItem="c7A-RP-QM6" secondAttribute="trailing" constant="15" id="xcq-gV-YOX"/>
+                                    <constraint firstAttribute="trailing" secondItem="c7A-RP-QM6" secondAttribute="trailing" constant="10" id="xcq-gV-YOX"/>
                                     <constraint firstAttribute="bottom" secondItem="c7A-RP-QM6" secondAttribute="bottom" constant="15" id="xf7-Fe-Nfy"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
@@ -937,9 +937,9 @@
                             <constraint firstItem="vhZ-Wj-KmD" firstAttribute="leading" secondItem="dMJ-hQ-3Up" secondAttribute="leading" id="Ox0-cs-LZy"/>
                             <constraint firstItem="rtg-uG-ld7" firstAttribute="leading" secondItem="dMJ-hQ-3Up" secondAttribute="leading" id="PuY-W7-eW4"/>
                             <constraint firstItem="BxT-aa-Jls" firstAttribute="top" secondItem="iPJ-rO-kCo" secondAttribute="bottom" constant="28.333333333333258" id="Pyi-7F-7cn"/>
-                            <constraint firstItem="XXR-2L-YIe" firstAttribute="top" secondItem="vhZ-Wj-KmD" secondAttribute="bottom" constant="24" id="PzI-OV-q3M"/>
                             <constraint firstItem="iPJ-rO-kCo" firstAttribute="top" secondItem="XXR-2L-YIe" secondAttribute="bottom" constant="15" id="Xt2-Rg-s0C"/>
                             <constraint firstItem="dMJ-hQ-3Up" firstAttribute="trailing" secondItem="X93-C9-yrd" secondAttribute="trailing" id="crx-Rl-dwW"/>
+                            <constraint firstItem="XXR-2L-YIe" firstAttribute="top" secondItem="X93-C9-yrd" secondAttribute="bottom" constant="23.333333333333329" id="dz1-Ny-Jlo"/>
                             <constraint firstItem="hfP-9O-gem" firstAttribute="centerY" secondItem="dMJ-hQ-3Up" secondAttribute="centerY" id="eh4-Tx-lIL"/>
                             <constraint firstItem="XXR-2L-YIe" firstAttribute="centerX" secondItem="dMJ-hQ-3Up" secondAttribute="centerX" id="iiu-ub-ifN"/>
                             <constraint firstItem="BxT-aa-Jls" firstAttribute="trailing" secondItem="iPJ-rO-kCo" secondAttribute="trailing" id="pjd-3g-rbN"/>
