Update for profile UI issues, logout and login flow

--- a/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
+++ b/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
@@ -164,6 +164,7 @@
                         <outlet property="topBarView" destination="IDt-vf-HrN" id="dvW-gX-H2K"/>
                         <outlet property="topConstraintOutlet" destination="ANj-Mf-9gX" id="ldf-NV-0FR"/>
                         <segue destination="Vks-3f-bfz" kind="unwind" identifier="showDashboardSegueID" unwindAction="unwindToDashboardWithSegue:" id="Ze8-f2-tBR"/>
+                        <segue destination="Vks-3f-bfz" kind="unwind" identifier="UnwindToLoadingView" unwindAction="unwindToLoadingViewWithSegue:" id="pUt-43-wc2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="epG-9H-8yh" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -424,6 +425,7 @@
                         <outlet property="topBarView" destination="5IV-4B-Hec" id="n2g-E3-r9r"/>
                         <outlet property="topConstraintOutlet" destination="8If-QR-3td" id="Mg7-nl-m6m"/>
                         <segue destination="gXX-ac-zLO" kind="unwind" identifier="showDashboardSegueID" unwindAction="unwindToDashboardWithSegue:" id="cz0-dD-Yb0"/>
+                        <segue destination="gXX-ac-zLO" kind="unwind" identifier="UnwindToLoadingView" unwindAction="unwindToLoadingViewWithSegue:" id="drk-K1-0cX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wDm-UV-wHZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
