remove the amount from refund request

--- a/IPSX/Flows/Funds/Storyboard/Funds.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Funds.storyboard
@@ -822,43 +822,8 @@
                                     <constraint firstAttribute="height" constant="94" id="jwT-qn-3ob"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XXR-2L-YIe" userLabel="Top Price View">
-                                <rect key="frame" x="62.666666666666657" y="112" width="249.99999999999997" height="20"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kzc-br-Dcu">
-                                        <rect key="frame" x="14.000000000000007" y="1" width="57.999999999999993" height="17"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
-                                        <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="160,200.50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ya1-Wx-5Ee">
-                                        <rect key="frame" x="92" y="0.3333333333333286" width="82" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                                        <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ipsxIcon" translatesAutoresizingMaskIntoConstraints="NO" id="MDN-cN-dA5">
-                                        <rect key="frame" x="182" y="2.3333333333333286" width="14" height="14"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="14" id="QfM-vP-Y4P"/>
-                                            <constraint firstAttribute="height" constant="14" id="rSi-0G-mLo"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="MDN-cN-dA5" firstAttribute="leading" secondItem="ya1-Wx-5Ee" secondAttribute="trailing" constant="8" id="1O1-hU-Mnh"/>
-                                    <constraint firstItem="MDN-cN-dA5" firstAttribute="centerY" secondItem="ya1-Wx-5Ee" secondAttribute="centerY" id="9bv-Q5-OBw"/>
-                                    <constraint firstAttribute="width" constant="250" id="PBT-hk-wBj"/>
-                                    <constraint firstItem="ya1-Wx-5Ee" firstAttribute="leading" secondItem="Kzc-br-Dcu" secondAttribute="trailing" constant="20" id="Rxb-ci-qPF"/>
-                                    <constraint firstItem="Kzc-br-Dcu" firstAttribute="leading" secondItem="XXR-2L-YIe" secondAttribute="leading" constant="14" id="fON-jG-irt"/>
-                                    <constraint firstAttribute="height" constant="20" id="oRm-vI-RBy"/>
-                                    <constraint firstItem="ya1-Wx-5Ee" firstAttribute="centerY" secondItem="Kzc-br-Dcu" secondAttribute="centerY" id="t0M-fb-jfF"/>
-                                    <constraint firstItem="Kzc-br-Dcu" firstAttribute="top" secondItem="XXR-2L-YIe" secondAttribute="top" constant="1" id="xfx-7q-Ov7"/>
-                                </constraints>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iPJ-rO-kCo" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                <rect key="frame" x="15" y="147" width="345" height="232"/>
+                                <rect key="frame" x="15" y="112.66666666666669" width="345" height="232"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reason" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRk-3E-6B2">
                                         <rect key="frame" x="15" y="15" width="53" height="18"/>
@@ -892,7 +857,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BxT-aa-Jls" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
-                                <rect key="frame" x="15" y="407.33333333333331" width="345" height="44"/>
+                                <rect key="frame" x="15" y="373" width="345" height="44"/>
                                 <color key="backgroundColor" red="0.1647058824" green="0.67450980390000004" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="3BT-3s-hYy"/>
@@ -937,11 +902,9 @@
                             <constraint firstItem="vhZ-Wj-KmD" firstAttribute="leading" secondItem="dMJ-hQ-3Up" secondAttribute="leading" id="Ox0-cs-LZy"/>
                             <constraint firstItem="rtg-uG-ld7" firstAttribute="leading" secondItem="dMJ-hQ-3Up" secondAttribute="leading" id="PuY-W7-eW4"/>
                             <constraint firstItem="BxT-aa-Jls" firstAttribute="top" secondItem="iPJ-rO-kCo" secondAttribute="bottom" constant="28.333333333333258" id="Pyi-7F-7cn"/>
-                            <constraint firstItem="iPJ-rO-kCo" firstAttribute="top" secondItem="XXR-2L-YIe" secondAttribute="bottom" constant="15" id="Xt2-Rg-s0C"/>
                             <constraint firstItem="dMJ-hQ-3Up" firstAttribute="trailing" secondItem="X93-C9-yrd" secondAttribute="trailing" id="crx-Rl-dwW"/>
-                            <constraint firstItem="XXR-2L-YIe" firstAttribute="top" secondItem="X93-C9-yrd" secondAttribute="bottom" constant="23.333333333333329" id="dz1-Ny-Jlo"/>
                             <constraint firstItem="hfP-9O-gem" firstAttribute="centerY" secondItem="dMJ-hQ-3Up" secondAttribute="centerY" id="eh4-Tx-lIL"/>
-                            <constraint firstItem="XXR-2L-YIe" firstAttribute="centerX" secondItem="dMJ-hQ-3Up" secondAttribute="centerX" id="iiu-ub-ifN"/>
+                            <constraint firstItem="iPJ-rO-kCo" firstAttribute="top" secondItem="X93-C9-yrd" secondAttribute="bottom" constant="24" id="h8m-c4-DYp"/>
                             <constraint firstItem="BxT-aa-Jls" firstAttribute="trailing" secondItem="iPJ-rO-kCo" secondAttribute="trailing" id="pjd-3g-rbN"/>
                             <constraint firstItem="dMJ-hQ-3Up" firstAttribute="trailing" secondItem="rtg-uG-ld7" secondAttribute="trailing" id="tei-LZ-Pkh"/>
                             <constraint firstItem="iPJ-rO-kCo" firstAttribute="height" secondItem="H3m-c9-BSY" secondAttribute="height" multiplier="1:3.5" id="vxs-IA-sgX"/>
@@ -952,7 +915,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="fcw-4p-v24"/>
                     <connections>
-                        <outlet property="amountLabel" destination="ya1-Wx-5Ee" id="6IV-3d-gLq"/>
                         <outlet property="loadingView" destination="hfP-9O-gem" id="D0B-UW-uQq"/>
                         <outlet property="proxyTitle" destination="YAZ-l7-4bC" id="hoi-dK-S3W"/>
                         <outlet property="reasonTextView" destination="c7A-RP-QM6" id="zpf-5c-a2L"/>
